# new_admin_panel_sprint_3

./: .dockerignore  .env.example  .example.env  .gitignore  README.md  compose.yml  config.py  docker.env  es_schema.txt  etl.Dockerfile  local.env  lol.py  main.py  makefile  pyproject.toml  ruff.toml
components/: __init__.py  enricher.py  extract.py  load.py  transform.py
etl/: config.py  connectors.py  enricher.py  extract.py  index_schema.py  main.py  models.py  state.py
etl/components/: enricher.py  extract.py  load.py  transform.py
mover/: config.py  elastic_schema.py  es_models.py  logger.py  main.py  my_log.py  state.py
mover/components/: __init__.py  enricher.py  extract.py  load.py  transform.py
mover/tests/: conftest.py  test_enricher.py  test_extract.py  test_load.py  test_state.py  test_transform.py
tests/: conftest.py  test_enricher.py  test_extract.py  test_state.py  test_transform.py
utils/: es_schema.py  logger.py  my_backoff.py  pg_connect.py  pg_utils.py  sql_templates.py
